modified homepage-wide css to fix main image distortion in lower viewports

--- a/app/styles/homepage-wide.scss
+++ b/app/styles/homepage-wide.scss
@@ -93,5 +93,12 @@
   width: 1280px;
   overflow: hidden;
   height: 400px;
+
+  @media screen and (max-width: 1200px) {
+    margin: 0;
+    width: 100%;
+    overflow: hidden;
+    height: auto;
+  }
 }
 
